--- a/src/app/services/services.css
+++ b/src/app/services/services.css
@@ -7,7 +7,7 @@
 }
 
 .services__content{
-    position: relative;
+    /* position: relative; */
     border: 1px solid rgb(0, 0, 0, 0.1);
     background-color: var(--container-color);
     padding: 6rem 0 2rem 2.5rem ;
