--- a/src/app/about/about.css
+++ b/src/app/about/about.css
@@ -4,10 +4,11 @@
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
     column-gap: 4rem;
+    background: rgba(255, 255, 255, 0.26);
 }
 
 .about__img {
-    width: 350px;
+    width: 250px;
     border-radius: 1.5rem;
     justify-self: center;
 }
