--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,6 @@
 @tailwind utilities;
 
 
-
 :root {
   --header-height: 3rem;
 
@@ -11,14 +10,14 @@
   /*Color mode HSL(hue, saturation, lightness)*/
   --hue: 0;
   --sat: 0%;
-  --title-color: hsl(var(--hue), var(--sat), 20%);
-  --title-color-dark: hsl(var(--hue), var(--sat), 0%);
+  --title-color:#000000; 
+  --title-color-dark: hsl(var(--hue), var(--sat), 022%);
   --text-color: hsl(var(--hue), var(--sat), 46%);
   --body-color: hsl(var(--hue), var(--sat), 98%);
-  --container-color: #fff;
+  --container-color: #ffffff;
   --color-scheme: dark;
   /*========== Font and typography ==========*/
-  --body-font: "Poppins", sans-serif;
+  --body-font: "Bungee Spice", sans-serif;
 
   /*.5rem = 8px | 1rem = 16px ...*/
   --big-font-size: 3.5rem;
@@ -70,14 +69,13 @@
   margin: 0;
   padding: 0;
 }
- 
- body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+body {
+  font-family: 'Bungee Spice', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: rgba(0, 0, 0, 0.26);
+  background-image: url(../../public/3398604.jpg);
+
 }
 
 button,
@@ -176,7 +174,6 @@ img {
 
 @media screen and (max-width: 992px) {
   .container {
-    margin-left: var(--mb-1-5);
     margin-right: var(--mb-1-5);
   }
 
@@ -215,7 +212,6 @@ img {
   }
 
   .container {
-    margin-left: var(--mb-1);
     margin-right: var(--mb-1);
   }
 }
