--- a/src/app/footer/footer.css
+++ b/src/app/footer/footer.css
@@ -2,7 +2,7 @@
 .footer{
     border-color: var(--container-color);
     border-top: 1px solid rgba(0, 0, 0, 0.1);
-    background-color: rgba(73, 73, 80, 0.144);
+    background-color: rgb(255, 253, 253);
     width: 100%;
 }
 
@@ -16,7 +16,7 @@
     display: flex;
     justify-content: center;
     column-gap: 1.5rem;
-    margin-bottom: var(--mb-2);
+    /* margin-bottom: var(--mb-2); */
 }
 
 
