--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -1,13 +1,19 @@
+
+.home{
+    background: rgba(206, 198, 198, 0.233);
+}
 .home__container{
     row-gap: 7rem;
-}
+   
 
+
+}
 .home__content{
     grid-template-columns: 116px repeat(2, 1fr);
     padding-top: 5.5rem;
     column-gap: 2rem;
     align-items: center;
-
+    /* background: rgba(206, 198, 198, 0.233); */
 }
 .home__social {
     display: grid;
@@ -25,11 +31,6 @@
 .home__title {
     font-size: var(--big-font-size);
     margin-bottom: var(--mb-0-25);
-}
-.home__hand{
-    width: 38px;
-    height: 38px;
-    margin-left: 0.4rem;
 }
 
 .home__subtitle{
@@ -52,59 +53,23 @@
 .home__description{
     max-width: 400px;
     margin-bottom: var(--mb-3);
+    color: rgb(255, 255, 255);
 }
 
-
+.home__data{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .home__img{
-    background-image: url(../../assets/perfil.jpg);
+    background-image: url(../../../public/perfil.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    box-shadow: inset 0 0 0 9px rgb(255 255 255 / 30%) ;
-    order: 1;
-    border-radius: 100px;
     justify-self: center;
     width: 300px;
     height: 300px;
-    animation: animate 8s ease-in-out infinite 1s;
 }
-
-
-@keyframes animate  {
-
-    0% {
-        border-radius: 40% 50% 20% 50%;
-        }
-
-    50% {
-        border-radius: 60% 40% 80% 70% ;
-        }
-
-    100% {
-        border-radius: 40% 50% 50% 20% ;
-        }
-}
-
-
-.home__scroll {
-    margin-left: 9.25rem;
-}
-.wheel {
-    animation: scroll 2s ease infinite;
-}
-
-
-
-@keyframes scroll {
-    0% {
-        transform: translateY(0);
-    }
-
-    30% {
-        transform: translateY(3.75rem);
-    }
-}
-
 
 
 /*=============== BREAKPOINTS ===============*/
@@ -114,16 +79,10 @@
         grid-template-columns: 100px repeat(2, 1fr);
         column-gap: 1.25rem;
     }
-    .home__hand{
-        width: 26px;
-        height: 26px;
-    }
     .home__subtitle {
-        /* padding: 1.75rem; */
         margin-bottom: var(--mb-1);
     }
     .home__subtitle::before{
-        /* width: 42px; */
         top: 0.8rem;
     }
     .home__description{
@@ -133,9 +92,7 @@
     .home__img{
         width: 250px;
         height: 250px;
-        box-shadow: inset 0 0 0 8px rgb(255 255 255 / 30%) ;
     }
-
 
 }
 @media screen and (max-width: 768px) {
@@ -144,16 +101,17 @@
         padding-top: 3.5rem;
     }
     .home__img{
-        order: initial;
-        justify-self: initial;
+
+        width: 200px;
+        height: 200px;
+        order: -1;
+        
     }
     .home__data{
         grid-column: 1/3;
     }
-    .home__img{
-        box-shadow: inset 0 0 0 6px rgb(255 255 255 / 30%) ;
-        width: 200px;
-        height: 200px;
+    .home__social{
+        order: -2;
     }
 
 }
@@ -163,10 +121,5 @@
     .home__img{
         width: 180px;
         height: 180px;
-
-    }
-    .home__hand{
-        width: 22px;
-        height: 22px;
-    }
+}
 }
