--- a/src/app/services/services.css
+++ b/src/app/services/services.css
@@ -4,6 +4,7 @@
     grid-template-columns: repeat(3, 270px);
     justify-content: center;
     column-gap: 1.8rem;
+    background: rgba(255, 255, 255, 0.26);
 }
 
 .services__content{
@@ -11,6 +12,8 @@
     border: 1px solid rgb(0, 0, 0, 0.1);
     background-color: var(--container-color);
     padding: 6rem 0 2rem 2.5rem ;
+   
+    
 }
 
 .services__icon{
@@ -35,7 +38,7 @@
 }
 .services__button-icon{
     font-size: 1rem;
-    transition: 0.3s;
+    transition: 0.8s;
 }
 
 .services__button:hover .services__button-icon {
@@ -62,6 +65,7 @@
 }
 
 .services__modal-content{
+    /* background-image: url(/portafolio/public//encriptardor.png); */
     width: 500px;
     position: relative;
     background-color: var(--container-color);
