--- a/src/app/about/about.css
+++ b/src/app/about/about.css
@@ -1,10 +1,12 @@
 
-
+#about{
+    margin: 2rem 2rem 4rem;
+    background: rgba(255, 255, 255, 0.26);
+}
 .about__container{
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
     column-gap: 4rem;
-    background: rgba(255, 255, 255, 0.26);
 }
 
 .about__img {
